trunk/Archive2/64/2411b43d6277e3/output
+ clang++ -std=c++11 -O3 -Wall -pedantic -pthread main.cpp
main.cpp:5:10: error: no type named 'vector' in namespace 'std'; did you mean 'hecto'?
    std::vector x;
    ~~~~~^~~~~~
         hecto
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ratio:522:47: note: 'hecto' declared here
  typedef ratio<                      100, 1> hecto;
                                              ^
1 error generated.
